--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Flask = "^2.0.2"
+twine = "2.0"
+readme-renderer = {extras = ["md"], version = "^32.0"}
 
 [tool.poetry.dev-dependencies]
 
